force-app/main/default/objects/Car_Rental_Trip__c/Car_Rental_Trip__c.object-meta.xml
<CustomObject>
    <label>Car Rental Trip</label>
    <nameField>
        <label>Car Rental Trip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Rental Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>