force-app/main/default/objects/Car_Rental_Trip__c/fields/Car_Rental_Customer__c.field-meta.xml
<CustomField>
    <fullName>Car_Rental_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Car Rental Customer</label>
    <referenceTo>Car_Rental_Customer__c</referenceTo>
    <relationshipLabel>Car Rental Trips</relationshipLabel>
    <relationshipName>Car_Rental_Trips</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>