force-app/main/default/objects/Car_Rental_Trip__c/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <label>Customer Feedback</label>
    <length>64</length>
    <type>Text</type>
</CustomField>