force-app/main/default/objects/Car_Rental_Trip__c/fields/End_Of_Trip__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Trip__c</fullName>
    <label>End Of Trip</label>
    <required>true</required>
    <type>Date</type>
</CustomField>