force-app/main/default/objects/Car_Rental_Trip__c/fields/Manager_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Manager_Feedback__c</fullName>
    <label>Manager Feedback</label>
    <length>64</length>
    <type>Text</type>
</CustomField>