force-app/main/default/objects/Car_Rental_Trip__c/fields/Start_Of_Trip__c.field-meta.xml
<CustomField>
    <fullName>Start_Of_Trip__c</fullName>
    <label>Start Of Trip</label>
    <required>true</required>
    <type>Date</type>
</CustomField>